# moneybackmyhome

./: .env.example  .gitignore  NOTES.md  README.md  prd.md  pyproject.toml
frontend/: app.py
frontend/pages/: analysis.py  chat.py  portfolio.py  settings.py
scripts/: seed_data.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  orchestrator.py
src/api/: dependencies.py
src/api/routes/: __init__.py  analysis.py  chat.py  portfolio.py
src/db/: __init__.py  database.py  models.py
src/models/: __init__.py  agent_state.py  analysis.py  portfolio.py
src/services/: portfolio_service.py  risk_calculator.py
src/tools/: __init__.py  calendar.py  market_data.py  options_data.py  portfolio.py  risk_analysis.py
tests/test_api/: test_portfolio.py
tests/test_tools/: test_market_data.py  test_options_data.py  test_risk_analysis.py
