[project]
name = "trading-assistant"
version = "0.1.0"
description = "Agentic stock investment assistant using LangGraph and Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "streamlit>=1.41.0",
    "yfinance>=0.2.50",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
